--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<h1>
-  {{title}}
-</h1>
-
-<app-file-upload></app-file-upload>
+<div class="container-fluid">
+  <file-upload></file-upload>
+</div>
