Add Name Component and Character Interface
Add a name component and character interface.  Future file parsing will add to the interface as necessary.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <div class="container-fluid">
-  <file-upload></file-upload>
+  <div class="row">
+    <file-upload></file-upload>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <name></name>
+    </div>
+  </div>
 </div>
