Add skeleton for character detail
Additional information to be added as necessary.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,10 @@
   </div>
 
   <div class="row">
-    <div class="col-xs-12">
-      <name></name>
-    </div>
+    <name></name>
+  </div>
+
+  <div class="row">
+    <character-detail></character-detail>
   </div>
 </div>
