--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row">
-    <file-upload></file-upload>
+    <app-file-upload></app-file-upload>
   </div>
 
   <div class="row">
     <div class="col-xs-12">
-      <name></name>
+      <app-name></app-name>
     </div>
   </div>
 </div>
