Add the final character detail elements
Add height, rework weight and age to be strings to avoid possible user fuckery.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
   </div>
 
   <div class="row">
-    <character-detail></character-detail>
+    <app-character-detail></app-character-detail>
   </div>
 </div>
