--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-navbar class="navbar fixed-top"></app-navbar>
+
 <div class="container-fluid">
   <div class="row">
     <app-file-upload></app-file-upload>
